ajustes no CRUD de mensagens e usuarios